Finalize HTML framework and contents

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <header>
                 <h1>Header Logo</h1>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href=" ">header link one</a></li>
+                    <li><a href=" ">header link two</a></li>
+                    <li><a href=" ">header link three</a></li>
                 </ul>
             </header>
             <div class="intro">
                 <div class="intro txt">
                     <h2>This website is awesome</h2>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button>Sign up</button>
+                    <button id="signup"><a href="#">Sign up</a></button>
                 </div>
                 <div class="intro img">
                     <p>this is a placeholder for an image</p>
@@ -57,11 +57,13 @@
             <p>- Thor, God of Thunder</p>
         </div>
         <div class="signup-container">
-            <div class="signup-container txt">
-                <h5>Call to action! It's time!</h5>
-                <p>Signup for our product by clicking the button right over there!</p>
+            <div class="signup-box">
+                <div class="signup-box txt">
+                    <h5>Call to action! It's time!</h5>
+                    <p>Signup for our product by clicking the button right over there!</p>
+                </div>
+                    <button id="signuptwo"><a href="#">Sign up</a></button>
             </div>
-            <button>Sign up</button>
         </div>
         <footer>
             <p>Copyright © The Odin Project 2021</p>
